# puppypeer

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  client.bat  public_key.pem  readme.md  run.bat  rustfmt.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: args.rs  copy.rs  gui.rs  installer.rs  main.rs  post.rs  service.rs  shell.rs  sysinfo.rs  types.rs  updater.rs  utility.rs
common/: Cargo.toml
common/src/: files.rs  hash_utility.rs  lib.rs  metadata.rs  time.rs
core/: Cargo.toml
core/src/: app.rs  db.rs  lib.rs  p2p.rs  scan.rs  state.rs  types.rs  wait_group.rs
frontend/: package-lock.json  package.json
frontend/pages/: _app.tsx  agents.tsx  index.tsx
frontend/pages/agent/: [agentId].tsx
frontend/src/: agents-table.tsx  conn.ts  navigationbar.tsx  trie.ts  types.ts  use-agents-state.ts
frontend/src/agent/: filesystem.tsx  use-folder-entries.tsx
old/agent/: Cargo.toml
old/agent/src/: file_metadata_cache.rs  file_watcher.rs  main.rs  types.rs
old/cli/src/: copy.rs  main.rs  post.rs
old/common/src/: lib.rs
old/proto-generated/: Cargo.toml
old/proto-generated/proto/: epic-shelter-service.proto
old/proto-generated/src/: lib.rs
old/server/src/: agent.rs  agent_register.rs  either_body.rs  grpc_server.rs  main.rs
server/: Cargo.toml
server/src/: config.rs  handlers.rs  main.rs
src/: copy.rs  main.rs  metadata.rs
