[package]
name = "epic-shelter-server"
version = "0.1.0"
authors = ["jaska <pusanteemu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
sanitize-filename = "0.2"
futures = "0.3.1"