[package]
name = "epic-shelter-server"
version = "0.1.0"
authors = ["jaska <pusanteemu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.11"
simple_logger = "1.11.0"
actix-web = "3"
actix-multipart = "0.3"
sanitize-filename = "0.2"
futures = "0.3.1"
serde = "1.0.118"
serde_json = "1.0.60"
tokio = { version = "0.2", features = ["full"] }
common = { path = "../common" }