[package]
name = "agent"
version = "0.1.0"
authors = ["jaska <pusanteemu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
notify = "4"
log = "0.4"
env_logger = "0.8"
common = { path = "../common" }
epic_shelter_generated_protos = { path = "../proto-generated" }
sled = "0.34"
tonic = "0.4"
failure = "0.1"
serde = "1.0"
bincode = "1.3"
quinn = "0.7.2"
url = "2"
anyhow = "1"
rustls = { version = "0.19", features = ["quic", "dangerous_configuration"] }
webpki = { version = "0.21" }